--- a/Redis/docs/1.Introduction.md
+++ b/Redis/docs/1.Introduction.md
@@ -4,7 +4,7 @@
     Redis是一种基于key-value的内存型的NoSql数据库
     有丰富的数据结构-字符串(string)、列表(list)、哈希(hash)、集合(set)、有序结合(zset)、位图(Bitmaps)、HyperLogLog、GEO(地理信息定位)等.
     Redis数据存放在内存中，读写性能惊人.Redis持久化时，将内存中的数据利用快照(RDB)或者日志(AOF)的形式持久化到硬盘上，保证内存中的数据不丢失.
-    Redis还提供`键过期`、`发布订阅`、`事务`、`流水线`、`Lua脚本`等功能
+    Redis还提供键过期、发布订阅、事务、流水线、Lua脚本等功能
 
 ## Redis的优点
 
