--- a/Redis/docs/1.Introduction.md
+++ b/Redis/docs/1.Introduction.md
@@ -97,7 +97,7 @@ redis-server --port 6380
 * 配置文件启动:将配置写到制定文件里(/opt/redis/redis.conf)
   
 ```shell
-redis-server /opt/redis/redis.conf
+redis-server /etc/redis/redis.conf
 ```
 
 ### 链接
